Fixed center alignmnet on button for projects

--- a/style.css
+++ b/style.css
@@ -473,7 +473,7 @@ article .icon {
 /* Project button styles */
 .btn-container {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   margin: 1rem;
   flex-shrink: 0; /* Prevent shrinking */
 }
